--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -1,97 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-<app-root> </app-root>
-   
-    <title>Calculadora IMC</title>
+<h1>Calculadora De IMC </h1>
 
-    <style>
-       
-        body {
-            background-color: rgb(0, 0, 0);
-           font-family: arial;
-           text-align: center;
-           
-        }
-        .text{
-            color: black;
-            position:absolute;
-            top: 40%;
-            left: 45%;
-            width: 50%;
-            transform: translate(-40%,-40%);
-            padding: 1em;
-            background-color: white;
-            border-radius: 10px;
-            background-color: rgb(255, 253, 253);
-          
-            
-        }
-
-        label{
-            font-size: 20px;
-        }
-        input{
-            font-size: 15px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        button{
-            color: white;
-            font-size: 15px;
-            padding: 10px;
-            border-radius: 5px;
-            background-color: black;
-        }
-     
-           
-        #resultado{
-            font-size: 30px;
-        }
-      
-        .fundo{
-
-            background-color: white;
-        }
-     
-        h1{
-            color:  white;
-        }
-
-     .will{
-        color: white;
-        font-size: 25px;
-        bottom: 50px;
-     }
-      
-       
-    </style> 
-
-</head>
-
-<body>
-    <div class="tesxtt">
-    <h1>Calculadora De IMC </h1>
-</div>
 <div class="text">
-    
+
     <h3> Digite seu peso e sua altura</h3>
 
-     <label for="peso">Digite seu peso:</label>
-            <input type="number"  [(ngModel)]="peso"   placeholder="Seu peso" >
-            <br><br>
-            <label for="altura">Digite a sua altura:</label>
-            <input type="number" [(ngModel)]="altura"  placeholder="Seu altura" >
-            <br><br>
-            <button onclick="calcularimc()">Calcular</button>
-            <p id="resultado"></p>
-            <br><br>
-<div class="resultado">
-            
-           
-        </div>
-
-
+    <label for="peso">Digite seu peso:</label>
+    <input type="number" [(ngModel)]="peso" placeholder="Seu peso">
+    <br><br>
+    <label for="altura">Digite a sua altura:</label>
+    <input type="number" [(ngModel)]="altura" placeholder="Seu altura">
+    <br><br>
+    <button class="btn btn-primary" (click)="calc()">Calcular</button>
+    <br>
+    {{imc}} 
+    <br>
+    <div >
+    {{resu}}
+    </div>
+</div>
